# AndroidNativeLibExample

./: .gitignore  .gitmodules  CMakeLists.txt  Example.cpp  Example.h  Example_wrap.cxx  NetCxx.cpp  NetCxx.h  NetCxx.i  NetCxx_wrap.cxx  README.md  example.i  main.cpp
AndroidApp/: settings.gradle
AndroidApp/app/: build.gradle
AndroidApp/app/src/androidTest/java/com/willkamp/example/: ApplicationTest.java
AndroidApp/app/src/main/: AndroidManifest.xml
AndroidApp/app/src/main/java/com/willkamp/example/: ExampleApp.java  MainActivity.java
AndroidApp/app/src/main/res/layout/: activity_main.xml
AndroidApp/app/src/main/res/values/: strings.xml
AndroidApp/app/src/test/java/com/willkamp/qtsvg/: ExampleUnitTest.java
AndroidApp/gradle/wrapper/: gradle-wrapper.properties
